tests/next_variant/fail/missing_default.stderr
error[E0277]: the trait bound `T: Default` is not satisfied
 --> tests/next_variant/fail/missing_default.rs:3:1
  |
3 | #[next_variant]
  | ^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `T`
  |
  = note: this error originates in the attribute macro `next_variant` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T`
  |
4 | enum Complex<T: std::default::Default> {
  |               +++++++++++++++++++++++
